finished the nav style and complete the banner section

--- a/index.html
+++ b/index.html
@@ -12,27 +12,60 @@
 <body>
     <!-- Header Section -->
     <header>
-        <nav>
-            <div class="logo"></div>
-            <div class="links">
-                <ul>
-                    <li>About Us</li>
-                    <li>Developers</li>
-                    <li>
-                        <div class="follow_link">
-                            <div class="follow_link_description">Follow Us On</div>
-                            <div class="follow_link_icon">
-                                <img src="Assets/icon/youtube-color-svgrepo-com.svg" alt="Youtube">
-                                <img src="Assets/icon/tiktok-svgrepo-com.svg" alt="Tiktok">
+        <!-- Nab Section -->
+        <section>
+            <nav>
+                <div class="logo flex">
+                    <div class="logo_icon flex"><img src="Assets/images/Frame.png" alt="Logo Icon"></div>
+                    <div class="logo_name flex"><span class="logo_name_G">G</span>amer</div>
+                </div>
+                <div class="links flex">
+                    <ul class="flex">
+                        <li>About Us</li>
+                        <li>Developers</li>
+                        <li>
+                            <div class="follow_link flex">
+                                <div class="follow_link_description">Follow Us On</div>
+                                <div class="follow_link_icon flex">
+                                    <img src="Assets/icon/youtube-color-svgrepo-com.svg" alt="Youtube">
+                                    <img src="Assets/icon/tiktok-svgrepo-com.svg" alt="Tiktok">
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </section>
+
     </header>
     <!-- Main Section -->
     <main>
+        <!-- banner section -->
+        <section class="banner_sec">
+            <div class="banner">
+                <div class="banner_description flex">
+                    <div class="b_d_head">
+                        <div>Play Like The</div>
+                        <div class="gradient-text">G.O.A.T.</div>
+                    </div>
+                    <div class="b_d_content">
+                        <ul>
+                            <li><img src="Assets/icon/play-circle-svgrepo-com-colored.svg" alt="Play" width="24px">
+                                1-Click instant play</li>
+                            <li><img src="Assets/icon/download-minimalistic-svgrepo-com-colored.svg" alt="Play"
+                                    width="24px"> No Download</li>
+                            <li><img src="Assets/icon/group-svgrepo-com.svg" alt="Play" width="24px"> 1000s of supported
+                                online games</li>
+                        </ul>
+                    </div>
+                    <div class="b_d_btn">
+                        <button class="btn_1">Sign In</button>
+                        <button class="btn_2">Go Rogue</button>
+                    </div>
+                </div>
+                <div class="banner_img flex"><img src="Assets/images/Group 18.png" alt=""></div>
+            </div>
+        </section>
 
     </main>
     <!-- Footer Section -->
