finished another section and make it resposive

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 <body>
     <!-- Header Section -->
     <header>
-        <!-- Nab Section -->
-        <section>
+        <!--
+        _____________________________
+             Nab Section
+        _____________________________
+        -->
+        <section class="nav">
             <nav>
                 <div class="logo flex">
                     <div class="logo_icon flex"><img src="Assets/images/Frame.png" alt="Logo Icon"></div>
@@ -40,30 +44,65 @@
     </header>
     <!-- Main Section -->
     <main>
-        <!-- banner section -->
+        <!--
+        _____________________________
+            banner section 
+        _____________________________
+        -->
         <section class="banner_sec">
             <div class="banner">
-                <div class="banner_description flex">
-                    <div class="b_d_head">
-                        <div>Play Like The</div>
-                        <div class="gradient-text">G.O.A.T.</div>
-                    </div>
-                    <div class="b_d_content">
-                        <ul>
-                            <li><img src="Assets/icon/play-circle-svgrepo-com-colored.svg" alt="Play" width="24px">
-                                1-Click instant play</li>
-                            <li><img src="Assets/icon/download-minimalistic-svgrepo-com-colored.svg" alt="Play"
-                                    width="24px"> No Download</li>
-                            <li><img src="Assets/icon/group-svgrepo-com.svg" alt="Play" width="24px"> 1000s of supported
-                                online games</li>
-                        </ul>
-                    </div>
-                    <div class="b_d_btn">
-                        <button class="btn_1">Sign In</button>
-                        <button class="btn_2">Go Rogue</button>
+                <div class="banner_description_container flex">
+                    <div class="banner_description flex">
+                        <div class="b_d_head">
+                            <div>Play Like The</div>
+                            <div class="gradient-text">G.O.A.T.</div>
+                        </div>
+                        <div class="b_d_content">
+                            <ul>
+                                <li><img src="Assets/icon/play-circle-svgrepo-com-colored.svg" alt="Play">
+                                    1-Click instant play</li>
+                                <li><img src="Assets/icon/download-minimalistic-svgrepo-com-colored.svg" alt="Play"> No
+                                    Download</li>
+                                <li><img src="Assets/icon/group-svgrepo-com.svg" alt="Play"> 1000s of
+                                    supported online games</li>
+                            </ul>
+                        </div>
+                        <div class="b_d_btn">
+                            <button class="btn_1">Sign In</button>
+                            <button class="btn_2">Go Rogue</button>
+                        </div>
                     </div>
                 </div>
+
                 <div class="banner_img flex"><img src="Assets/images/Group 18.png" alt=""></div>
+            </div>
+        </section>
+
+        <!--
+        ______________________________________
+            we are Gamer banner Section
+        ______________________________________
+        -->
+        <section class="w_G_b_container">
+            <div class="w_Gamer_banner ">
+                <div class="w_gamer_img flex">
+                    <img src="Assets/images/pngwing 4.png" alt="">
+                </div>
+                <div class="w_g_description flex">
+                    <div class="w_g_d_head gradient-text">
+                        We are gamer
+                    </div>
+                    <div class="w_g_d_content">
+                        An international digital games and entertainment company. We develop, publish and distribute
+                        multiplayer mobile games. We reach over 400 million players each month and our audience keeps
+                        growing.
+                    </div>
+                    <button class="w_g_d_btn btn_1">know more</button>
+                    <div class="w_g_d_proverb">
+                        Our purpose... <br>
+                        <span>“unleash the gamer in everyone”</span>
+                    </div>
+                </div>
             </div>
         </section>
 
