finished another 4 sections styles it and make it resposive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
+    <link rel="shortcut icon" href="Assets/images/Frame.png" />
     <link rel="stylesheet" href="Assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -40,7 +41,6 @@
                 </div>
             </nav>
         </section>
-
     </header>
     <!-- Main Section -->
     <main>
@@ -89,7 +89,7 @@
                     <img src="Assets/images/pngwing 4.png" alt="">
                 </div>
                 <div class="w_g_description flex">
-                    <div class="w_g_d_head gradient-text">
+                    <div class="w_g_d_head section_head gradient-text">
                         We are gamer
                     </div>
                     <div class="w_g_d_content">
@@ -106,6 +106,169 @@
             </div>
         </section>
 
+        <!--
+        ______________________________________
+            Funny Gameing video Section
+        ______________________________________
+        -->
+        <section>
+            <div class="g_video_sec">
+                <div class="g_v_head">
+                    <div class="g_v_headline section_head">
+                        Online Games <span class="gradient-text">Funny Videos</span>
+                    </div>
+                    <div class="g_v_h_description ">
+                        A Collection of Hilarious Videos to Brighten Your Day
+                    </div>
+                </div>
+                <div class="g_v_c_container">
+                    <div class="g_v_card">
+                        <div class="g_v_c_img flex">
+                            <img src="Assets/images/Rectangle 4.png" alt="Video Tamblain">
+                            <div class="overlay-content">
+                                <img src="Assets/icon/play-button-svgrepo-com.svg" alt="Play Icon" class="play-icon">
+                                <span class="watch-now">Watch Now</span>
+                            </div>
+                        </div>
+                        <div class="g_V_C_description">
+                            No Download. No Installs. Play games Instantly on Gamer.
+                        </div>
+                    </div>
+                    <div class="g_v_card">
+                        <div class="g_v_c_img flex">
+                            <img src="Assets/images/Rectangle 5.png" alt="Video Tamblain">
+                            <div class="overlay-content">
+                                <img src="Assets/icon/play-button-svgrepo-com.svg" alt="Play Icon" class="play-icon">
+                                <span class="watch-now">Watch Now</span>
+                            </div>
+                        </div>
+                        <div class="g_V_C_description">
+                            Did you score? #unblockedgames #school
+                        </div>
+                    </div>
+                    <div class="g_v_card">
+                        <div class="g_v_c_img flex">
+                            <img src="Assets/images/Rectangle 7.png" alt="Video Tamblain">
+                            <div class="overlay-content">
+                                <img src="Assets/icon/play-button-svgrepo-com.svg" alt="Play Icon" class="play-icon">
+                                <span class="watch-now">Watch Now</span>
+                            </div>
+                        </div>
+                        <div class="g_V_C_description">
+                            Breaking game records like OG
+                        </div>
+                    </div>
+                    <div class="g_v_card">
+                        <div class="g_v_c_img flex">
+                            <img src="Assets/images/Rectangle 6.png" alt="Video Tamblain">
+                            <div class="overlay-content">
+                                <img src="Assets/icon/play-button-svgrepo-com.svg" alt="Play Icon" class="play-icon">
+                                <span class="watch-now">Watch Now</span>
+                            </div>
+                        </div>
+                        <div class="g_V_C_description">
+                            Busted gaming on school laptop, but you are still lit.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--
+        ______________________________________
+            Sub banner-1 Section
+        ______________________________________
+        -->
+        <section>
+            <div class="s_banner_1">
+                <div class="s_banner_container">
+                    <div class="s_b_d_1_container flex">
+                        <div class="s_b_description s_b_1_description">
+                            <div class="s_b_d_1_head section_head"><span class="gradient-text">Play
+                                    Instantly,</span><br>No Downloads <br>No Installs.
+                            </div>
+                            <div class="s_b_d_1_content s_d_c">Play games online for free without downloading. Just
+                                click the Play button and play instantly in your browser.</div>
+                        </div>
+                    </div>
+                    <div class="s_b_imgs s_b_1_imgs">
+                        <div class="s_b_img-1"><img src="Assets/images/Rectangle 55.png" alt="Big Banner picture"></div>
+                        <div class="s_b_img-2 s_b_1_img-2"><img src="Assets/images/Rectangle 66.png"
+                                alt="Small Banner picture">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--
+        ______________________________________
+            Sub banner-2 Section
+        ______________________________________
+        -->
+        <section>
+            <div class="s_banner_2">
+                <div class="s_banner_container">
+                    <div class="s_b_d_2_container flex">
+                        <div class="s_b_description s_b_2_description">
+                            <div class="s_b_d_2_head section_head"><span class="gradient-text">Play Games
+                                    <br>Online</span>
+                                Anywhere, Anytime!
+                            </div>
+                            <div class="s_b_d_2_content s_d_c">PC. dad’s phone, mom’s tablet, or your Chromebook, with
+                                Gamer you can play your favorite games online for free, any time, anywhere , on any
+                                device..</div>
+                        </div>
+                    </div>
+                    <div class="s_b_imgs s_b_2_imgs">
+                        <div class="s_b_img-1"><img src="Assets/images/Rectangle 67.png" alt="Big Banner picture"></div>
+                        <div class="s_b_img-2 s_b_2_img-2"><img src="Assets/images/Rectangle 78.png"
+                                alt="Small Banner picture">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--
+        ______________________________________
+            Careers Section
+        ______________________________________
+        -->
+        <section class="careers">
+            <div class="career_section">
+                <div class="c_d_container flex ">
+                    <div class="career_discription ">
+                        <div class="career_text">
+                            <h2 class="section_head">Careers</h2>
+                            <p class="s_d_c">Gamer is driven to create the best and most fun games for our millions of
+                                players all around the world, and we’re always on the lookout for more top talent to
+                                join our growing team. If you’d like to help us make great games and be a part of
+                                Gamer’s bright future, we’d love to hear from you.</p>
+                        </div>
+                        <div class="career_list">
+                            <div class="job"><span>Multimedia Artist + </span><span>Lisbon, Portugal</span></div>
+                            <div class="job"><span>Data Engineer + </span><span>Lisbon, Portugal</span></div>
+                            <div class="job"><span>Android Engineer + </span><span>Zoetermeer, Netherlands</span></div>
+                            <div class="job"><span>Server Developer + </span><span>Lisbon, Portugal</span></div>
+                            <div class="job"><span>Group Financial Accountant + </span><span>London, United
+                                    Kingdom</span></div>
+                            <div class="job"><span>Senior User Acquisition Specialist + </span><span>Lisbon,
+                                    Portugal</span></div>
+                        </div>
+                        <button class="see_positions">See All Positions</button>
+                    </div>
+                </div>
+                <div class="career_image">
+                    <img src="Assets/images/Group 65.png" alt="Career Image">
+                </div>
+            </div>
+        </section>
+        <!--
+        ______________________________________
+            Game category Section
+        ______________________________________
+        -->
+        <section>
+            
+        </section>
     </main>
     <!-- Footer Section -->
     <footer>
