finished category and footer sections styles it and make it resposive

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gamer Zone</title>
     <link rel="shortcut icon" href="Assets/images/Frame.png" />
     <link rel="stylesheet" href="Assets/css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -267,12 +267,84 @@
         ______________________________________
         -->
         <section>
-            
+            <div class="category_sec">
+                <div class="category_container">
+
+                    <div class="category_card flex">
+                        <div class="cc_img flex"><img src="Assets/images/Rectangle 11.png" alt="Category-Pic"></div>
+                        <div class="cc_name flex">Action Games</div>
+                    </div>
+                    <div class="category_card flex">
+                        <div class="cc_img flex"><img src="Assets/images/Rectangle 12.png" alt="Category-Pic"></div>
+                        <div class="cc_name flex">Adventure Games</div>
+                    </div>
+                    <div class="category_card flex">
+                        <div class="cc_img flex"><img src="Assets/images/Rectangle 13.png" alt="Category-Pic"></div>
+                        <div class="cc_name flex">Arcade Games</div>
+                    </div>
+                    <div class="category_card flex">
+                        <div class="cc_img flex"><img src="Assets/images/Rectangle 14.png" alt="Category-Pic"></div>
+                        <div class="cc_name flex">Educational Games</div>
+                    </div>
+                    <div class="category_card flex">
+                        <div class="cc_img flex"><img src="Assets/images/Rectangle 15.png" alt="Category-Pic"></div>
+                        <div class="cc_name flex">Word Games</div>
+                    </div>
+                    <div class="category_card flex">
+                        <div class="cc_img flex"><img src="Assets/images/Rectangle 16.png" alt="Category-Pic"></div>
+                        <div class="cc_name flex">Role Palying Games</div>
+                    </div>
+                    <div class="category_card flex">
+                        <div class="cc_img flex"><img src="Assets/images/Rectangle 17.png" alt="Category-Pic"></div>
+                        <div class="cc_name flex">Music & Audio Games</div>
+                    </div>
+                    <div class="category_card flex">
+                        <div class="cc_img flex"><img src="Assets/images/Rectangle 18.png" alt="Category-Pic"></div>
+                        <div class="cc_name flex">Puzzle Games</div>
+                    </div>
+                    <div class="category_card flex">
+                        <div class="cc_img flex"><img src="Assets/images/Rectangle 19.png" alt="Category-Pic"></div>
+                        <div class="cc_name flex">Strategy Games</div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- Footer Section -->
-    <footer>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="logo-container">
+                <img src="Assets/images/Frame.png" alt="Gamer Logo" class="logo">
+                <span>Gamer</span>
+            </div>
 
+            <nav class="nav-links">
+                <a href="#our-story">Our Story</a>
+                <a href="#games">Games</a>
+                <a href="#web-games">Web Games</a>
+                <a href="#careers">Careers</a>
+                <a href="#support">Support</a>
+                <a href="#my-account">My Account</a>
+            </nav>
+
+            <div class="social_media flex">
+                <div class="sm_icons flex"><img src="Assets/icon/twitter-154-svgrepo-com.svg" alt="S.M.Icon"></div>
+                <div class="sm_icons flex"><img src="Assets/icon/facebook-svgrepo-com.svg" alt="S.M.Icon"></div>
+                <div class="sm_icons flex"><img src="Assets/icon/youtube-svgrepo-com.svg" alt="S.M.Icon"></div>
+                <div class="sm_icons flex"><img src="Assets/icon/linked-in-logo-of-two-letters-svgrepo-com.svg" alt="S.M.Icon"></div>
+                <div class="sm_icons flex"><img src="Assets/icon/instagram-svgrepo-com.svg" alt="S.M.Icon"></div>
+                <div class="sm_icons flex"><img src="Assets/icon/apple-svgrepo-com.svg" alt="S.M.Icon"></div>
+            </div>
+
+            <div class="policy-links">
+                <a href="#terms">Terms and Conditions</a>
+                <a href="#privacy">Privacy Policy</a>
+                <a href="#cookie">Cookie Policy</a>
+                <a href="#settings">Privacy Settings</a>
+            </div>
+
+            <p class="copyright">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
     </footer>
 </body>
 
