make some change

--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@
     <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-content">
-            <div class="logo-container">
-                <img src="Assets/images/Frame.png" alt="Gamer Logo" class="logo">
-                <span>Gamer</span>
+            <div class="footer_logo-container">
+                <img src="Assets/images/Frame.png" alt="Gamer Logo" class="f_logo">
+                <span><span class="logo_name_G">G</span>amer</span>
             </div>
 
             <nav class="nav-links">
